--- a/Ch04/ex04-01.html
+++ b/Ch04/ex04-01.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -7,7 +9,7 @@
 </head>
 
 <body>
-<div id="header"><a href="index.html"><img src="images/main_logo.jpg" width="167" height="101" class="headerLogo noborder transition" /></a><span class="headerCopy">Copyright © Cute Design Studio All rights reserved</span>.<a href="mailto:service@flag.com.tw"><img src="images/email.png" width="150" height="51" class="email noborder transition" /></a></div>
+<div id="header"><a href="index.html"><img src="images/main_logo.jpg" width="167" height="101" class="headerLogo noborder transition" /></a><span class="headerCopy">Copyright c Cute Design Studio All rights reserved</span>.<a href="mailto:service@flag.com.tw"><img src="images/email.png" width="150" height="51" class="email noborder transition" /></a></div>
 <div id="content">
   <div id="contentL">
     <div id="sidemenu"><a href="about.html"><img src="images/about_btn.png" width="162" height="144" class="noborder transition" /></a><a href="works.html"><img src="images/works_btn.png" width="162" height="144" class="noborder" /></a></div>
